--- a/Assets/css/styles.css
+++ b/Assets/css/styles.css
@@ -1,20 +1,108 @@
 *{
     margin: 0px;
     padding: 0px;
+    box-sizing: border-box;
 }
 
 body{
     margin: 5px;
+    display: flex;
+    flex-direction: column;
+}
+
+header{
+    width: 100%;
+    top: 0;
+    background-image: url("../images/sky.jpeg");
+    background-position:bottom;
+    background-size: cover;
 }
 
 h1{
     text-align: center;
-    background-image: url("../images/sky.jpeg");
-    background-position:bottom;
-    background-size: cover;
     color:floralwhite;
     padding: 30px 0 10px 0;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 48px;
     font-weight: normal;
+    border-bottom: 3px solid floralwhite;
+}
+
+.page{
+    display: flex;
+    flex-direction: row;
+    height: 86vh;
+}
+
+.searchSection{
+    border-right: 3px solid skyblue;
+    width: 20%;
+    height: 100%;
+}
+
+.inputdiv{
+    margin-right: 5px;
+    text-align: center;
+}
+
+.input{
+    height: 40px;
+    border: 3px solid skyblue;
+    outline: none;
+    border-radius: 5px;
+    width: 100%;
+    margin-top: 35px;
+    overflow: none;
+    font-size: large;
+    text-align: center;
+}
+
+.searchButton{ 
+    text-decoration: none;
+    text-align: center;
+    margin-top: 15px;
+    background-color: white;
+    color: skyblue;
+    width: 100%;
+    height: 40px;
+    border: 3px solid  skyblue;
+    border-radius: 5px;
+    font-size: larger;
+}
+
+.searchButton:hover{
+    background-color: skyblue;
+    color: floralwhite;
+}
+
+ul{
+    display: flex;
+    flex-direction: column;
+    margin-top: 35px;
+    padding-top: 35px;
+    margin-right: 5px;
+    text-align: center;
+    border-top: 3px dotted skyblue;
+}
+
+li{
+    height: 35px;
+    width: 100%;
+    border: 3px solid skyblue;
+    border-radius: 5px;
+    margin: 5px 0px;
+    align-items: center;
+    background-color: skyblue;
+    color: white;
+    padding-top: 5px;
+}
+
+li:hover{
+    background-color: white;
+    color:  skyblue;
+}
+
+.weatherSection{
+    display: flex;
+    flex-direction: column;
 }
