--- a/Assets/css/styles.css
+++ b/Assets/css/styles.css
@@ -2,6 +2,7 @@
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 body{
@@ -35,7 +36,6 @@ h1{
 }
 
 .searchSection{
-    border-right: 2px solid skyblue;
     width: 20%;
     height: 100%;
 }
@@ -57,7 +57,8 @@ h1{
     text-align: center;
 }
 
-.searchButton{ 
+.searchButton,
+.btn{ 
     text-decoration: none;
     text-align: center;
     margin-top: 15px;
@@ -70,16 +71,27 @@ h1{
     font-size: larger;
 }
 
-.searchButton:hover{
+.delButton{
+    margin-top: 10px;
+    color: red;
+    border: 2px solid red;
+}
+
+.searchButton:hover,
+.btn:hover{
     background-color: skyblue;
     color: floralwhite;
+}
+
+.delButton:hover{
+    background-color: red;
 }
 
 ul{
     display: flex;
     flex-direction: column;
-    margin-top: 35px;
-    padding-top: 35px;
+    margin-top: 15px;
+    padding-top: 15px;
     margin-right: 5px;
     text-align: center;
     border-top: 2px dotted skyblue;
@@ -107,4 +119,69 @@ li:hover{
 .weatherSection{
     display: flex;
     flex-direction: column;
+    width: 100%;
+    border-left: 2px solid skyblue;
+}
+
+.details{
+    display: flex;
+    flex-direction: column;
+    border: 2px solid skyblue;
+    margin: 5px 0px 5px 5px;
+    padding: 10px 0px 10px 10px;
+    height: 40%;
+}
+
+h2{
+    margin: 10px;
+    color: skyblue;
+    font-size: xx-large;
+    font-weight: 600;
+}
+
+h3{
+    margin: 10px;
+    color: skyblue;
+    font-weight: 500;
+}
+
+.forecast{
+    display: flex;
+    flex-direction: column;
+    border: 2px solid skyblue;
+    margin: 5px 0px 5px 5px;
+    padding: 10px 10px 10px 10px;
+    height: 60%;
+}
+
+.forecast h2{
+    font-weight: 300;
+    font-size:x-large;
+    padding: 10px 0px 35px 0px;
+}
+
+.forecastdivs{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.day{
+    display: flex;
+    flex-direction: column;
+    background-color: skyblue;
+    border-radius: 5px;
+    width: 15%;
+    height: 120%;
+    justify-content: space-around;
+}
+
+.day h3{
+    color: white;
+}
+
+@media screen and (max-width:800px) {
+    .delButton{
+        font-size: small;
+    }
 }
