--- a/Assets/css/styles.css
+++ b/Assets/css/styles.css
@@ -75,6 +75,7 @@ h1{
     margin-top: 10px;
     color: red;
     border: 2px solid red;
+    height: 35px;
 }
 
 .searchButton:hover,
@@ -151,7 +152,7 @@ h3{
     border: 2px solid skyblue;
     margin: 5px 0px 5px 5px;
     padding: 10px 10px 10px 10px;
-    height: 60%;
+    height: 55%;
 }
 
 .forecast h2{
@@ -172,7 +173,7 @@ h3{
     background-color: skyblue;
     border-radius: 5px;
     width: 15%;
-    height: 120%;
+    height: 100%;
     justify-content: space-around;
 }
 
