--- a/Assets/css/styles.css
+++ b/Assets/css/styles.css
@@ -13,10 +13,10 @@ body{
 
 header{
     width: 100%;
-    top: 0;
     background-image: url("../images/sky.jpeg");
     background-position:bottom;
     background-size: cover;
+    border: 2px solid skyblue;
 }
 
 h1{
@@ -26,17 +26,15 @@ h1{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 48px;
     font-weight: normal;
-    border-bottom: 2px solid floralwhite;
 }
 
 .page{
     display: flex;
     flex-direction: row;
-    height: 86vh;
 }
 
 .searchSection{
-    width: 20%;
+    width: 30%;
     height: 100%;
 }
 
@@ -46,13 +44,12 @@ h1{
 }
 
 .input{
-    height: 40px;
+    height: 35px;
     border: 2px solid skyblue;
     outline: none;
     border-radius: 5px;
     width: 100%;
-    margin-top: 35px;
-    overflow: none;
+    margin-top: 5px;
     font-size: large;
     text-align: center;
 }
@@ -61,11 +58,11 @@ h1{
 .btn{ 
     text-decoration: none;
     text-align: center;
-    margin-top: 15px;
+    margin-top: 10px;
     background-color: white;
     color: skyblue;
     width: 100%;
-    height: 40px;
+    height: 35px;
     border: 2px solid  skyblue;
     border-radius: 5px;
     font-size: larger;
@@ -91,8 +88,8 @@ h1{
 ul{
     display: flex;
     flex-direction: column;
-    margin-top: 15px;
-    padding-top: 15px;
+    margin-top: 10px;
+    padding-top: 5px;
     margin-right: 5px;
     text-align: center;
     border-top: 2px dotted skyblue;
@@ -121,15 +118,14 @@ li:hover{
     display: flex;
     flex-direction: column;
     width: 100%;
-    border-left: 2px solid skyblue;
 }
 
 .details{
     display: flex;
     flex-direction: column;
     border: 2px solid skyblue;
-    margin: 5px 0px 5px 5px;
-    padding: 10px 0px 10px 10px;
+    margin: 5px 0px 0px 5px;
+    padding: 5px 0px 10px 10px;
     height: 40%;
 }
 
@@ -150,9 +146,9 @@ h3{
     display: flex;
     flex-direction: column;
     border: 2px solid skyblue;
-    margin: 5px 0px 5px 5px;
+    margin: 5px 0px 0px 5px;
     padding: 10px 10px 10px 10px;
-    height: 55%;
+    height: 60%;
 }
 
 .forecast h2{
