--- a/Assets/css/styles.css
+++ b/Assets/css/styles.css
@@ -75,7 +75,7 @@ h1{
     color: red;
     border: 2px solid red;
     height: 35px;
-    /* visibility: hidden; */
+    visibility: hidden;
 }
 
 .searchButton:hover,
