--- a/Assets/css/styles.css
+++ b/Assets/css/styles.css
@@ -119,9 +119,9 @@ li:hover{
 .weatherSection{
     display: flex;
     flex-direction: column;
-    width: 100%;
+    width: 70%;
     visibility: hidden;
-    height: 86vh;
+    height: auto;
 }
 
 .details{
@@ -197,10 +197,10 @@ h3{
 .forecastdivs{
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: start;
     flex-wrap: wrap;
     height: auto;
-    margin-bottom: 10px;
+    margin: 10px;
 }
 
 .day{
@@ -209,7 +209,8 @@ h3{
     background-color: skyblue;
     border-radius: 5px;
     width: auto;
-    height: 100%;
+    height: auto;
+    margin: 10px;
     justify-content: space-around;
 
 }
